feat: DTM関連コンテンツページを追加し、スタイルを更新

--- a/dtm_80sVGM.html
+++ b/dtm_80sVGM.html
@@ -29,10 +29,10 @@
       }
       @keyframes crt-glow-anim {
         from {
-          text-shadow: 0 0 5px #00ff41, 0 0 10px #00ff41;
+          text-shadow: 0 0 3px #007f20, 0 0 6px #007f20;
         }
         to {
-          text-shadow: 0 0 8px #39ff14, 0 0 15px #39ff14;
+          text-shadow: 0 0 5px #007f20, 0 0 10px #007f20;
         }
       }
       .font-press-start {
@@ -40,8 +40,8 @@
       }
       .card {
         background-color: rgba(0, 20, 0, 0.7);
-        border: 1px solid #00ff41;
-        box-shadow: 0 0 15px rgba(0, 255, 65, 0.3) inset;
+        border: 1px solid #007f20;
+        box-shadow: 0 0 10px rgba(0, 127, 32, 0.2) inset;
       }
       .card-title {
         background-color: #00ff41;
