--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buzz - junt74.com</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,138 +46,153 @@
       }
     </style>
   </head>
-  <body class="antialiased">
-    <div class="container mx-auto p-4 sm:p-6 md:p-8">
-      <header class="text-center mb-12 md:mb-16">
+  <body>
+    <div class="container mx-auto p-4">
+      <header class="text-center mb-5">
         <h1
-          class="font-orbitron text-4xl md:text-6xl font-bold text-white mb-2"
+          class="font-orbitron display-4 fw-bold text-white mb-2"
         >
           Buzz
         </h1>
-        <p class="text-lg md:text-xl text-gray-300">
+        <p class="fs-5 text-secondary">
           Welcome to Buzz! This is a link collection page.
         </p>
       </header>
 
-      <div class="max-w-4xl mx-auto space-y-12">
-        <div>
-          <h2 class="section-title text-2xl md:text-3xl">ゲーム制作:</h2>
-          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <li>
-              <a href="gamedev_indie_virtuoso.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  インディー・ヴィルトゥオーソ戦略
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  個人の強みを最大限に活かし、市場で際立つ独自のゲームを創造するための戦略的アプローチ。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="gamedev_viral_playbook.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  インタラクティブ・バイラル・プレイブック
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  プレイヤーが思わずシェアしたくなる仕掛けを組み込み、ゲームの口コミ拡散を狙うための実践的ガイド。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="gamedev_playable_meme.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  プレイアブルミーム戦略ガイド
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  インターネットミームの力を活用し、瞬時に注目を集める「遊べるミーム」を作るためのアイデアと手法。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="gamedev_bakage_flashcard.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  バカゲー三題噺フラッシュカード
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  3つのランダムなキーワードから、奇想天外な「バカゲー」のアイデアを生み出すための発想支援ツール。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="gamedev_jslib_for_rhythm_game.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  音ゲー向けJS/TS音声ライブラリ
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  Web技術で音ゲーを開発する際に直面する、音声の遅延や同期問題を解決するためのライブラリ選定ガイド。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="gamedev_otoge_for_vtuber.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  VTuberに遊んでもらう音ゲー開発戦略
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  VTuberや配信者が「配信でプレイしたくなる」音ゲーを設計するための、企画・開発における考慮点。
-                </p>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-8">
+          <div class="mb-5">
+            <h2 class="section-title fs-2">ゲーム制作:</h2>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+              <div class="col">
+                <a href="gamedev/indie_virtuoso.html" class="link-card text-decoration-none">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    インディー・ヴィルトゥオーソ戦略
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    個人の強みを最大限に活かし、市場で際立つ独自のゲームを創造するための戦略的アプローチ。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    インタラクティブ・バイラル・プレイブック
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    プレイヤーが思わずシェアしたくなる仕掛けを組み込み、ゲームの口コミ拡散を狙うための実践的ガイド。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    プレイアブルミーム戦略ガイド
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    インターネットミームの力を活用し、瞬時に注目を集める「遊べるミーム」を作るためのアイデアと手法。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    バカゲー三題噺フラッシュカード
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    3つのランダムなキーワードから、奇想天外な「バカゲー」のアイデアを生み出すための発想支援ツール。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    音ゲー向けJS/TS音声ライブラリ
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    Web技術で音ゲーを開発する際に直面する、音声の遅延や同期問題を解決するためのライブラリ選定ガイド。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    VTuberに遊んでもらう音ゲー開発戦略
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    VTuberや配信者が「配信でプレイしたくなる」音ゲーを設計するための、企画・開発における考慮点。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <div>
-          <h2 class="section-title text-2xl md:text-3xl">DTM制作:</h2>
-          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <li>
-              <a href="dtm_modern_vintage.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  Modern Vintage - 音楽制作ブループリント
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  ヴィンテージ機材のサウンドを現代的な文法で再構築し、独自の音楽を生み出すための制作アイデア集。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="dtm_arsenal_strategy.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  アーセナル戦略ガイド
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  限られたVSTプラグインを最大限に活用し、創造性を引き出すための「少数精鋭」音源選択と思考法。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="dtm_make_much_music.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  DTM楽曲量産ワークフロー
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  楽曲制作のボトルネックを特定・解消し、クオリティを維持しながら制作ペースを向上させる実践的手法。
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="dtm_80sVGM.html" class="link-card">
-                <h3 class="font-semibold text-lg text-blue-300">
-                  80年代ゲームミュージック DTM再現ガイド
-                </h3>
-                <p class="text-sm text-gray-400 mt-1">
-                  FM音源やPSG音源を駆使し、80年代アーケードや家庭用ゲーム機の象徴的なサウンドをDTMで再現するための実践的ガイド。
-                </p>
-              </a>
-            </li>
-          </ul>
+          <div class="mb-5">
+            <h2 class="section-title fs-2">DTM制作:</h2>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    Modern Vintage - 音楽制作ブループリント
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    ヴィンテージ機材のサウンドを現代的な文法で再構築し、独自の音楽を生み出すための制作アイデア集。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <a href="computer_music/arsenal_strategy.html" class="link-card text-decoration-none">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    アーセナル戦略ガイド
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    限られたVSTプラグインを最大限に活用し、創造性を引き出すための「少数精鋭」音源選択と思考法。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <a href="computer_music/arsenal_list.html" class="link-card text-decoration-none">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    VSTプラグインアーセナルリスト
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    創造性を引き出すための「少数精鋭」プラグインコレクション一覧と詳細情報。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <div class="link-card">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    DTM楽曲量産ワークフロー
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    楽曲制作のボトルネックを特定・解消し、クオリティを維持しながら制作ペースを向上させる実践的手法。
+                  </p>
+                </div>
+              </div>
+              <div class="col">
+                <a href="computer_music/80s_vgm.html" class="link-card text-decoration-none">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    80年代ゲームミュージック DTM再現ガイド
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    FM音源やPSG音源を駆使し、80年代アーケードや家庭用ゲーム機の象徴的なサウンドをDTMで再現するための実践的ガイド。
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <footer class="text-center mt-16">
-        <p class="text-gray-500">
-          &copy; 2024 junt74.com. All rights reserved.
+      <footer class="text-center mt-5">
+        <p class="text-muted">
+          &copy; 2025 junt74.com. All rights reserved.
         </p>
       </footer>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
