feat: Update link structure and add DTM workflow page with detailed steps

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                 </a>
               </div>
               <div class="col">
-                <div class="link-card">
+                <a href="computer_music/make_much_music.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     DTM楽曲量産ワークフロー
                   </h3>
                   <p class="small text-secondary mt-2">
                     楽曲制作のボトルネックを特定・解消し、クオリティを維持しながら制作ペースを向上させる実践的手法。
                   </p>
-                </div>
+                </a>
               </div>
               <div class="col">
                 <a href="computer_music/80s_vgm.html" class="link-card text-decoration-none">
