feat: Update link structure for DTM制作 section to use anchor tags for better accessibility

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
             <h2 class="section-title fs-2">DTM制作:</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <div class="link-card">
+                <a href="computer_music/modern_vintage.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     Modern Vintage - 音楽制作ブループリント
                   </h3>
                   <p class="small text-secondary mt-2">
                     ヴィンテージ機材のサウンドを現代的な文法で再構築し、独自の音楽を生み出すための制作アイデア集。
                   </p>
-                </div>
+                </a>
               </div>
               <div class="col">
                 <a href="computer_music/arsenal_strategy.html" class="link-card text-decoration-none">
