feat: Update game development links to use anchor tags for improved accessibility and clarity

--- a/index.html
+++ b/index.html
@@ -75,54 +75,54 @@
                 </a>
               </div>
               <div class="col">
-                <div class="link-card">
+                <a href="gamedev/viral_playbook.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     インタラクティブ・バイラル・プレイブック
                   </h3>
                   <p class="small text-secondary mt-2">
                     プレイヤーが思わずシェアしたくなる仕掛けを組み込み、ゲームの口コミ拡散を狙うための実践的ガイド。
                   </p>
-                </div>
+                </a>
               </div>
               <div class="col">
-                <div class="link-card">
+                <a href="gamedev/playable_meme.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     プレイアブルミーム戦略ガイド
                   </h3>
                   <p class="small text-secondary mt-2">
                     インターネットミームの力を活用し、瞬時に注目を集める「遊べるミーム」を作るためのアイデアと手法。
                   </p>
-                </div>
+                </a>
               </div>
               <div class="col">
-                <div class="link-card">
+                <a href="gamedev/bakage_flashcard.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     バカゲー三題噺フラッシュカード
                   </h3>
                   <p class="small text-secondary mt-2">
                     3つのランダムなキーワードから、奇想天外な「バカゲー」のアイデアを生み出すための発想支援ツール。
                   </p>
-                </div>
+                </a>
               </div>
               <div class="col">
-                <div class="link-card">
-                  <h3 class="fw-semibold fs-5 text-info">
-                    音ゲー向けJS/TS音声ライブラリ
-                  </h3>
-                  <p class="small text-secondary mt-2">
-                    Web技術で音ゲーを開発する際に直面する、音声の遅延や同期問題を解決するためのライブラリ選定ガイド。
-                  </p>
-                </div>
-              </div>
-              <div class="col">
-                <div class="link-card">
+                <a href="gamedev/otoge_for_vtuber.html" class="link-card text-decoration-none">
                   <h3 class="fw-semibold fs-5 text-info">
                     VTuberに遊んでもらう音ゲー開発戦略
                   </h3>
                   <p class="small text-secondary mt-2">
                     VTuberや配信者が「配信でプレイしたくなる」音ゲーを設計するための、企画・開発における考慮点。
                   </p>
-                </div>
+                </a>
+              </div>
+              <div class="col">
+                <a href="gamedev/jslib_for_rhythm_game.html" class="link-card text-decoration-none">
+                  <h3 class="fw-semibold fs-5 text-info">
+                    音ゲー向けJS/TS音声ライブラリ
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    Web技術で音ゲーを開発する際に直面する、音声の遅延や同期問題を解決するためのライブラリ選定ガイド。
+                  </p>
+                </a>
               </div>
             </div>
           </div>
