--- a/gamedev/jslib_for_rhythm_game.html
+++ b/gamedev/jslib_for_rhythm_game.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>音ゲー向けJS/TS音声ライブラリ</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>音ゲー向けJS/TS音声ライブラリ選定ガイド</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,68 +18,29 @@
         background-color: #111827;
         color: #e5e7eb;
       }
-      .container {
-        max-width: 1024px;
-        margin: 0 auto;
-        padding: 2rem;
-      }
-      .header {
-        border-bottom: 1px solid #374151;
-        padding-bottom: 2rem;
-        margin-bottom: 2rem;
-        text-align: center;
-      }
       .header h1 {
-        font-size: 2.5rem;
-        font-weight: 700;
-        letter-spacing: 0.05em;
         background: linear-gradient(to right, #4f46e5, #ec4899);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
-      .header p {
-        font-size: 1.125rem;
-        color: #9ca3af;
-        margin-top: 1rem;
-      }
       .card {
         background-color: #1f2937;
-        border-radius: 0.75rem;
-        padding: 2rem;
-        margin-bottom: 2rem;
         border: 1px solid #374151;
-        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-          0 4px 6px -2px rgba(0, 0, 0, 0.05);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
       }
       .card:hover {
         transform: translateY(-5px);
-        box-shadow: 0 20px 25px -5px rgba(79, 70, 229, 0.2),
-          0 10px 10px -5px rgba(79, 70, 229, 0.1);
+        box-shadow: 0 10px 15px -3px rgba(79, 70, 229, 0.2);
+        border-color: #4f46e5;
       }
-      .card h2 {
-        font-size: 1.875rem;
-        font-weight: 700;
+      .card-title {
         color: #f9fafb;
         border-bottom: 2px solid #4f46e5;
-        padding-bottom: 0.5rem;
-        margin-bottom: 1.5rem;
       }
-      .card h3 {
-        font-size: 1.25rem;
-        font-weight: 600;
-        color: #d1d5db;
-        margin-top: 1.5rem;
-        margin-bottom: 1rem;
-      }
-      .card p,
+      .card-text,
       .card li {
         color: #9ca3af;
         line-height: 1.75;
-      }
-      .card ul {
-        list-style-type: disc;
-        padding-left: 1.5rem;
       }
       .code-block {
         background-color: #0d1117;
@@ -93,21 +55,11 @@
         font-size: 0.875rem;
         color: #c9d1d9;
       }
-      .code-comment {
-        color: #8b949e;
-      }
-      .code-keyword {
-        color: #ff7b72;
-      }
-      .code-string {
-        color: #a5d6ff;
-      }
-      .code-function {
-        color: #d2a8ff;
-      }
-      .code-variable {
-        color: #79c0ff;
-      }
+      .code-comment { color: #8b949e; }
+      .code-keyword { color: #ff7b72; }
+      .code-string { color: #a5d6ff; }
+      .code-function { color: #d2a8ff; }
+      .code-variable { color: #79c0ff; }
       .copy-btn {
         position: absolute;
         top: 0.75rem;
@@ -121,83 +73,41 @@
         font-size: 0.75rem;
         transition: background-color 0.2s;
       }
-      .copy-btn:hover {
-        background-color: #4b5563;
-      }
-      .comparison-table {
-        width: 100%;
-        margin-top: 2rem;
-        border-collapse: collapse;
-      }
-      .comparison-table th,
-      .comparison-table td {
-        border: 1px solid #374151;
-        padding: 1rem;
-        text-align: left;
-      }
-      .comparison-table th {
-        background-color: #1f2937;
-        font-weight: 600;
-      }
-      .comparison-table td {
-        background-color: #111827;
-      }
-      .comparison-table .check {
-        color: #34d399;
-        font-weight: bold;
-        text-align: center;
-      }
-      .comparison-table .good {
-        color: #a7f3d0;
-        text-align: center;
-      }
-      .comparison-table .normal {
-        color: #fcd34d;
-        text-align: center;
-      }
-      .comparison-table .expert {
-        color: #fca5a5;
-        text-align: center;
-      }
+      .copy-btn:hover { background-color: #4b5563; }
+      .table-dark .check { color: #34d399; font-weight: bold; }
+      .table-dark .good { color: #a7f3d0; }
+      .table-dark .normal { color: #fcd34d; }
+      .table-dark .expert { color: #fca5a5; }
     </style>
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <h1>音ゲー向けJS/TS音声ライブラリ</h1>
-        <p>
+    <div class="container py-5">
+      <header class="header text-center pb-5 mb-5 border-bottom border-secondary">
+        <h1 class="display-4 fw-bold">音ゲー向けJS/TS音声ライブラリ</h1>
+        <p class="fs-5 text-secondary mt-3">
           正確な時間管理が命の音ゲー開発。その心臓部となる音声処理に最適なライブラリを徹底比較します。
         </p>
       </header>
 
       <main>
         <!-- Howler.js Card -->
-        <section class="card">
-          <h2>Howler.js</h2>
-          <p>
-            Web Audio
-            APIをラップし、手軽さと高機能を両立させた人気のライブラリ。クロスブラウザ対応も万全で、多くの場面で最初の選択肢となります。
+        <section class="card shadow-sm rounded-3 p-4 p-md-5 mb-4">
+          <h2 class="card-title fs-2 fw-bold pb-2 mb-4">Howler.js</h2>
+          <p class="card-text">
+            Web Audio APIをラップし、手軽さと高機能を両立させた人気のライブラリ。クロスブラウザ対応も万全で、多くの場面で最初の選択肢となります。
           </p>
-
-          <h3>主な特徴</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">主な特徴</h3>
           <ul>
             <li>シンプルで直感的なAPI。学習コストが低い。</li>
             <li>再生、停止、ループ、フェードなど基本的な操作が簡単。</li>
-            <li>
-              音声スプライト機能で、一つのファイルから複数の効果音を管理可能。
-            </li>
-            <li>
-              Web Audio APIが使えない古いブラウザではHTML5
-              Audioに自動フォールバック。
-            </li>
+            <li>音声スプライト機能で、一つのファイルから複数の効果音を管理可能。</li>
+            <li>Web Audio APIが使えない古いブラウザではHTML5 Audioに自動フォールバック。</li>
           </ul>
-
-          <h3>こんな場合に最適</h3>
-          <p>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">こんな場合に最適</h3>
+          <p class="card-text">
             手軽に音ゲー開発を始めたい場合や、複雑な音声処理よりも開発速度を重視する場合に最適です。
           </p>
-
-          <h3>再生時間の取得コード</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">再生時間の取得コード</h3>
           <div class="code-block">
             <button class="copy-btn" onclick="copyCode(this)">Copy</button>
             <pre><code><span class="code-comment">// Howler.jsをインポート</span>
@@ -226,28 +136,23 @@
         </section>
 
         <!-- Web Audio API Card -->
-        <section class="card">
-          <h2>Web Audio API (ネイティブ)</h2>
-          <p>
+        <section class="card shadow-sm rounded-3 p-4 p-md-5 mb-4">
+          <h2 class="card-title fs-2 fw-bold pb-2 mb-4">Web Audio API (ネイティブ)</h2>
+          <p class="card-text">
             ブラウザ標準のAPI。最高の精度と柔軟性を持ち、音声処理のすべてをコントロールしたいプロフェッショナル向けの選択肢です。
           </p>
-
-          <h3>主な特徴</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">主な特徴</h3>
           <ul>
             <li>フレーム単位での極めて正確なタイミング制御が可能。</li>
-            <li>
-              音量、パン、フィルタ、エフェクトなど、高度で複雑な音声処理を自由に実装できる。
-            </li>
+            <li>音量、パン、フィルタ、エフェクトなど、高度で複雑な音声処理を自由に実装できる。</li>
             <li>外部ライブラリへの依存がない。</li>
             <li>音声の生成や合成も可能。</li>
           </ul>
-
-          <h3>こんな場合に最適</h3>
-          <p>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">こんな場合に最適</h3>
+          <p class="card-text">
             ミリ秒単位のズレも許されないシビアな判定を持つ音ゲーや、独自の音声エフェクトを実装したい場合に最適です。
           </p>
-
-          <h3>再生時間の取得コード</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">再生時間の取得コード</h3>
           <div class="code-block">
             <button class="copy-btn" onclick="copyCode(this)">Copy</button>
             <pre><code><span class="code-comment">// AudioContextの初期化</span>
@@ -285,26 +190,23 @@
         </section>
 
         <!-- Tone.js Card -->
-        <section class="card">
-          <h2>Tone.js</h2>
-          <p>
+        <section class="card shadow-sm rounded-3 p-4 p-md-5 mb-4">
+          <h2 class="card-title fs-2 fw-bold pb-2 mb-4">Tone.js</h2>
+          <p class="card-text">
             音楽制作(DAW)の概念を取り入れた、音楽的な同期処理に特化したライブラリ。BPMに合わせたイベント管理が非常に強力です。
           </p>
-
-          <h3>主な特徴</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">主な特徴</h3>
           <ul>
             <li>BPMと完全に同期したイベントのスケジューリングが得意。</li>
             <li>「4分音符」「次の小節の頭」など、音楽的な時間指定が可能。</li>
             <li>豊富なシンセサイザーやエフェクトを内蔵。</li>
             <li>譜面データと音楽の厳密な同期を容易に実現。</li>
           </ul>
-
-          <h3>こんな場合に最適</h3>
-          <p>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">こんな場合に最適</h3>
+          <p class="card-text">
             BPMが変化する楽曲や、シーケンサーのように正確なタイミングで多数のイベントを発生させたい音ゲーに最適です。
           </p>
-
-          <h3>再生時間の取得コード</h3>
+          <h3 class="fs-4 fw-semibold mt-4 mb-3">再生時間の取得コード</h3>
           <div class="code-block">
             <button class="copy-btn" onclick="copyCode(this)">Copy</button>
             <pre><code><span class="code-comment">// Tone.jsをインポート</span>
@@ -335,11 +237,11 @@
         </section>
 
         <!-- Comparison Table -->
-        <section class="card">
-          <h2>ライブラリ比較表</h2>
-          <div class="overflow-x-auto">
-            <table class="comparison-table">
-              <thead>
+        <section class="card shadow-sm rounded-3 p-4 p-md-5 mb-4">
+          <h2 class="card-title fs-2 fw-bold pb-2 mb-4">ライブラリ比較表</h2>
+          <div class="table-responsive">
+            <table class="table table-dark table-bordered align-middle">
+              <thead class="text-center">
                 <tr>
                   <th>項目</th>
                   <th>Howler.js</th>
@@ -347,7 +249,7 @@
                   <th>Tone.js</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody class="text-center">
                 <tr>
                   <td><strong>手軽さ</strong></td>
                   <td class="good">非常に簡単</td>
@@ -391,28 +293,23 @@
       </main>
     </div>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
       function copyCode(button) {
         const pre = button.nextElementSibling;
         const code = pre.querySelector("code");
         const text = code.innerText;
 
-        const textArea = document.createElement("textarea");
-        textArea.value = text;
-        document.body.appendChild(textArea);
-        textArea.select();
-        try {
-          document.execCommand("copy");
+        navigator.clipboard.writeText(text).then(() => {
           button.innerText = "Copied!";
-        } catch (err) {
+          setTimeout(() => {
+            button.innerText = "Copy";
+          }, 2000);
+        }).catch(err => {
           console.error("Failed to copy text: ", err);
           button.innerText = "Error";
-        }
-        document.body.removeChild(textArea);
-
-        setTimeout(() => {
-          button.innerText = "Copy";
-        }, 2000);
+        });
       }
     </script>
   </body>
