feat: Update H3 text color in dark theme for better visibility

--- a/gamedev/jslib_for_rhythm_game.html
+++ b/gamedev/jslib_for_rhythm_game.html
@@ -78,6 +78,9 @@
       .table-dark .good { color: #a7f3d0; }
       .table-dark .normal { color: #fcd34d; }
       .table-dark .expert { color: #fca5a5; }
+      H3 {
+        color: #f9fafb;
+      }
     </style>
   </head>
   <body>
