feat: Add F/A Sound Creation Navigator page with interactive strategies and Bootstrap integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buzz - junt74.com</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,11 +54,7 @@
   <body>
     <div class="container mx-auto p-4">
       <header class="text-center mb-5">
-        <h1
-          class="font-orbitron display-4 fw-bold text-white mb-2"
-        >
-          Buzz
-        </h1>
+        <h1 class="font-orbitron display-4 fw-bold text-white mb-2">Buzz</h1>
         <p class="fs-5 text-secondary">
           Welcome to Buzz! This is a link collection page.
         </p>
@@ -65,7 +66,10 @@
             <h2 class="section-title fs-2">ゲーム制作:</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <a href="gamedev/indie_virtuoso.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/indie_virtuoso.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     インディー・ヴィルトゥオーソ戦略
                   </h3>
@@ -75,7 +79,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="gamedev/viral_playbook.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/viral_playbook.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     インタラクティブ・バイラル・プレイブック
                   </h3>
@@ -85,7 +92,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="gamedev/playable_meme.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/playable_meme.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     プレイアブルミーム戦略ガイド
                   </h3>
@@ -95,7 +105,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="gamedev/bakage_flashcard.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/bakage_flashcard.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     バカゲー三題噺フラッシュカード
                   </h3>
@@ -105,7 +118,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="gamedev/otoge_for_vtuber.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/otoge_for_vtuber.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     VTuberに遊んでもらう音ゲー開発戦略
                   </h3>
@@ -115,7 +131,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="gamedev/jslib_for_rhythm_game.html" class="link-card text-decoration-none">
+                <a
+                  href="gamedev/jslib_for_rhythm_game.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     音ゲー向けJS/TS音声ライブラリ
                   </h3>
@@ -131,7 +150,10 @@
             <h2 class="section-title fs-2">DTM制作:</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <a href="computer_music/modern_vintage.html" class="link-card text-decoration-none">
+                <a
+                  href="computer_music/modern_vintage.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     Modern Vintage - 音楽制作ブループリント
                   </h3>
@@ -141,7 +163,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="computer_music/arsenal_strategy.html" class="link-card text-decoration-none">
+                <a
+                  href="computer_music/arsenal_strategy.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     アーセナル戦略ガイド
                   </h3>
@@ -151,7 +176,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="computer_music/arsenal_list.html" class="link-card text-decoration-none">
+                <a
+                  href="computer_music/arsenal_list.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     VSTプラグインアーセナルリスト
                   </h3>
@@ -161,7 +189,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href="computer_music/make_much_music.html" class="link-card text-decoration-none">
+                <a
+                  href="computer_music/make_much_music.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     DTM楽曲量産ワークフロー
                   </h3>
@@ -171,12 +202,28 @@
                 </a>
               </div>
               <div class="col">
-                <a href="computer_music/80s_vgm.html" class="link-card text-decoration-none">
+                <a
+                  href="computer_music/80s_vgm.html"
+                  class="link-card text-decoration-none"
+                >
                   <h3 class="fw-semibold fs-5 text-info">
                     80年代ゲームミュージック DTM再現ガイド
                   </h3>
                   <p class="small text-secondary mt-2">
                     FM音源やPSG音源を駆使し、80年代アーケードや家庭用ゲーム機の象徴的なサウンドをDTMで再現するための実践的ガイド。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <a
+                  href="computer_music/fa_storm.html"
+                  class="link-card text-decoration-none"
+                >
+                  <h3 class="fw-semibold fs-5 text-info">
+                    F/Aサウンド クリエーションナビゲーター
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    所有プラグインを駆使した「F/A」風サウンド構築戦略ガイド。攻撃性と叙情性の両面を兼ね備えた楽曲制作のためのプラグイン活用術。
                   </p>
                 </a>
               </div>
@@ -186,13 +233,15 @@
       </div>
 
       <footer class="text-center mt-5">
-        <p class="text-muted">
-          &copy; 2025 junt74.com. All rights reserved.
-        </p>
+        <p class="text-muted">&copy; 2025 junt74.com. All rights reserved.</p>
       </footer>
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
