feat: ジェットファンククリエーションナビゲーターへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -216,6 +216,19 @@
               </div>
               <div class="col">
                 <a
+                  href="computer_music/jet_funk.html"
+                  class="link-card text-decoration-none"
+                >
+                  <h3 class="fw-semibold fs-5 text-info">
+                    ジェットファンク クリエーションナビゲーター
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    高速でエネルギッシュなジェットファンクサウンドを作るためのDTMテクニックと楽曲構成のノウハウ。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <a
                   href="computer_music/fa_storm.html"
                   class="link-card text-decoration-none"
                 >
