feat: コンテンツのリンクと説明を更新し、音楽制作ガイドを強化

--- a/index.html
+++ b/index.html
@@ -151,19 +151,6 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
                 <a
-                  href="computer_music/modern_vintage.html"
-                  class="link-card text-decoration-none"
-                >
-                  <h3 class="fw-semibold fs-5 text-info">
-                    Modern Vintage - 音楽制作ブループリント
-                  </h3>
-                  <p class="small text-secondary mt-2">
-                    ヴィンテージ機材のサウンドを現代的な文法で再構築し、独自の音楽を生み出すための制作アイデア集。
-                  </p>
-                </a>
-              </div>
-              <div class="col">
-                <a
                   href="computer_music/arsenal_strategy.html"
                   class="link-card text-decoration-none"
                 >
@@ -190,27 +177,14 @@
               </div>
               <div class="col">
                 <a
-                  href="computer_music/make_much_music.html"
+                  href="computer_music/modern_vintage.html"
                   class="link-card text-decoration-none"
                 >
                   <h3 class="fw-semibold fs-5 text-info">
-                    DTM楽曲量産ワークフロー
+                    Modern Vintage - 音楽制作ブループリント
                   </h3>
                   <p class="small text-secondary mt-2">
-                    楽曲制作のボトルネックを特定・解消し、クオリティを維持しながら制作ペースを向上させる実践的手法。
-                  </p>
-                </a>
-              </div>
-              <div class="col">
-                <a
-                  href="computer_music/80s_vgm.html"
-                  class="link-card text-decoration-none"
-                >
-                  <h3 class="fw-semibold fs-5 text-info">
-                    80年代ゲームミュージック DTM再現ガイド
-                  </h3>
-                  <p class="small text-secondary mt-2">
-                    FM音源やPSG音源を駆使し、80年代アーケードや家庭用ゲーム機の象徴的なサウンドをDTMで再現するための実践的ガイド。
+                    ヴィンテージ機材のサウンドを現代的な文法で再構築し、独自の音楽を生み出すための制作アイデア集。
                   </p>
                 </a>
               </div>
@@ -240,10 +214,35 @@
                   </p>
                 </a>
               </div>
+              <div class="col">
+                <a
+                  href="computer_music/80s_vgm.html"
+                  class="link-card text-decoration-none"
+                >
+                  <h3 class="fw-semibold fs-5 text-info">
+                    80年代ゲームミュージック DTM再現ガイド
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    FM音源やPSG音源を駆使し、80年代アーケードや家庭用ゲーム機の象徴的なサウンドをDTMで再現するための実践的ガイド。
+                  </p>
+                </a>
+              </div>
+              <div class="col">
+                <a
+                  href="computer_music/make_much_music.html"
+                  class="link-card text-decoration-none"
+                >
+                  <h3 class="fw-semibold fs-5 text-info">
+                    AI×ボカロソング量産ワークフロー
+                  </h3>
+                  <p class="small text-secondary mt-2">
+                    楽曲制作のボトルネックを特定・解消し、クオリティを維持しながら制作ペースを向上させる実践的手法。
+                  </p>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
       <footer class="text-center mt-5">
         <p class="text-muted">&copy; 2025 junt74.com. All rights reserved.</p>
