--- a/computer_music/jet_funk.html
+++ b/computer_music/jet_funk.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ジェットファンク：長沼英樹サウンドスタイルガイド</title>
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- Inter フォントの読み込み -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -14,9 +19,10 @@
     <style>
       body {
         font-family: "Inter", sans-serif;
-        /* ダークオレンジの背景色 */
         background-color: #2a1a00; /* 非常に暗いオレンジ/ブラウン */
+        color: #f8f9fa; /* Bootstrap light text */
       }
+
       /* カスタムダークオレンジの定義 */
       .bg-dark-orange {
         background-color: #cc5500; /* メインのダークオレンジ */
@@ -27,50 +33,99 @@
       .border-dark-orange {
         border-color: #cc5500;
       }
-      .hover\:bg-dark-orange-light:hover {
+      .bg-dark-orange-light:hover {
         background-color: #e66a00; /* ホバー時の明るいオレンジ */
       }
       .bg-dark-orange-darker {
-        background-color: #994000; /* より暗いオレンジ */
+        background-color: #472913; /* より暗いオレンジ */
       }
+
       /* Markdownコンテンツのスタイリング調整 */
       .markdown-content h1 {
-        @apply text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight text-white;
+        font-size: 3.5rem;
+        font-weight: 800;
+        margin-bottom: 1.5rem;
+        line-height: 1.2;
+        color: white;
       }
       .markdown-content h2 {
-        @apply text-3xl sm:text-4xl font-bold text-dark-orange mb-8 text-center;
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: #cc5500;
+        margin-bottom: 2rem;
+        text-align: center;
       }
       .markdown-content h3 {
-        @apply text-2xl sm:text-3xl font-bold text-dark-orange mb-4;
+        font-size: 1.875rem;
+        font-weight: 700;
+        color: #cc5500;
+        margin-bottom: 1rem;
       }
       .markdown-content p {
-        @apply text-lg text-gray-300 mb-4;
+        font-size: 1.125rem;
+        color: #d1d5db;
+        margin-bottom: 1rem;
       }
       .markdown-content ul {
-        @apply list-disc list-inside space-y-2 mb-6 pl-4;
+        list-style-type: disc;
+        list-style-position: inside;
+        margin-bottom: 1.5rem;
+        padding-left: 1rem;
       }
       .markdown-content li {
-        @apply text-gray-300;
+        color: #d1d5db;
+        margin-bottom: 0.5rem;
       }
       .markdown-content strong {
-        @apply text-dark-orange;
+        color: #cc5500;
+      }
+
+      /* レスポンシブ調整 */
+      @media (max-width: 576px) {
+        .markdown-content h1 {
+          font-size: 2.5rem;
+        }
+        .markdown-content h2 {
+          font-size: 2rem;
+        }
+        .markdown-content h3 {
+          font-size: 1.5rem;
+        }
+      }
+
+      @media (min-width: 992px) {
+        .markdown-content h1 {
+          font-size: 4rem;
+        }
+        .markdown-content h2 {
+          font-size: 3rem;
+        }
       }
     </style>
   </head>
-  <body class="text-gray-100">
+  <body class="text-light">
     <!-- ナビゲーションバー -->
-    <nav class="bg-dark-orange p-4 shadow-lg rounded-b-lg">
-      <div class="container mx-auto flex justify-between items-center">
+    <nav class="navbar navbar-expand-md bg-dark-orange shadow-lg">
+      <div class="container-fluid">
         <a
           href="#"
-          class="text-white text-2xl font-bold rounded-md p-2 hover:bg-dark-orange-darker transition-colors duration-300"
+          class="navbar-brand text-white fs-4 fw-bold px-3 py-2 bg-dark-orange-light:hover"
         >
           ジェットファンク
         </a>
-        <div class="md:hidden">
-          <button id="menu-button" class="text-white focus:outline-none">
+        <button
+          class="navbar-toggler border-0"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon text-white">
             <svg
-              class="w-6 h-6"
+              width="24"
+              height="24"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
@@ -83,76 +138,84 @@
                 d="M4 6h16M4 12h16M4 18h16"
               ></path>
             </svg>
-          </button>
-        </div>
-        <div
-          id="nav-menu"
-          class="hidden md:flex flex-col md:flex-row md:space-x-8 mt-4 md:mt-0 items-center"
-        >
-          <a
-            href="#"
-            class="text-white hover:text-gray-300 py-2 px-3 rounded-md transition-colors duration-300"
-            >ホーム</a
-          >
-          <a
-            href="#"
-            class="text-white hover:text-gray-300 py-2 px-3 rounded-md transition-colors duration-300"
-            >ガイド</a
-          >
-          <a
-            href="#"
-            class="text-white hover:text-gray-300 py-2 px-3 rounded-md transition-colors duration-300"
-            >プラグイン</a
-          >
-          <a
-            href="#"
-            class="text-white hover:text-gray-300 py-2 px-3 rounded-md transition-colors duration-300"
-            >お問い合わせ</a
-          >
+          </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">ホーム</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">ガイド</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">プラグイン</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">お問い合わせ</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
 
     <!-- ヒーローセクション -->
     <header
-      class="relative bg-dark-orange-darker text-white py-16 md:py-24 lg:py-32 rounded-lg m-4 shadow-xl overflow-hidden"
+      class="position-relative bg-dark-orange-darker text-white py-5 m-4 rounded shadow-lg overflow-hidden"
+      style="min-height: 400px"
     >
-      <div class="container mx-auto text-center px-4">
-        <h1
-          class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight"
-        >
+      <div class="container text-center px-4 py-5">
+        <h1 class="display-3 fw-bold mb-4 lh-sm">
           ジェットファンクの世界へようこそ
         </h1>
-        <p
-          class="text-lg sm:text-xl lg:text-2xl mb-8 max-w-3xl mx-auto opacity-90"
-        >
+        <p class="lead mb-4 mx-auto" style="max-width: 600px; opacity: 0.9">
           長沼英樹氏のユニークなサウンドスタイル「ジェットファンク」を深く探求し、あなたの音楽制作に活かすためのガイド。
         </p>
       </div>
-      <!-- 背景の抽象的な図形 (Tailwind CSSで円形を配置) -->
+      <!-- 背景の抽象的な図形 -->
       <div
-        class="absolute top-0 left-0 w-full h-full overflow-hidden pointer-events-none"
+        class="position-absolute top-0 start-0 w-100 h-100 overflow-hidden"
+        style="pointer-events: none"
       >
         <div
-          class="absolute w-48 h-48 bg-dark-orange-darker opacity-30 rounded-full -top-12 -left-12 transform rotate-45"
+          class="position-absolute bg-dark-orange-darker rounded-circle opacity-25"
+          style="
+            width: 200px;
+            height: 200px;
+            top: -50px;
+            left: -50px;
+            transform: rotate(45deg);
+          "
         ></div>
         <div
-          class="absolute w-64 h-64 bg-dark-orange opacity-20 rounded-full -bottom-24 -right-24 transform -rotate-30"
+          class="position-absolute bg-dark-orange rounded-circle opacity-25"
+          style="
+            width: 250px;
+            height: 250px;
+            bottom: -100px;
+            right: -100px;
+            transform: rotate(-30deg);
+          "
         ></div>
         <div
-          class="absolute w-32 h-32 bg-dark-orange-darker opacity-40 rounded-full top-1/4 right-1/4 transform rotate-60"
+          class="position-absolute bg-dark-orange-darker rounded-circle opacity-50"
+          style="
+            width: 120px;
+            height: 120px;
+            top: 25%;
+            right: 25%;
+            transform: rotate(60deg);
+          "
         ></div>
       </div>
     </header>
 
     <!-- ジェットファンクガイドコンテンツ -->
-    <main class="container mx-auto p-4 sm:p-6 lg:p-8">
+    <main class="container py-4">
       <section
-        class="my-12 bg-gray-800 p-6 sm:p-8 lg:p-10 rounded-lg shadow-lg border border-gray-700 markdown-content"
+        class="my-5 bg-dark-orange-darker p-4 p-md-5 rounded shadow border border-dark-orange markdown-content"
       >
-        <h1
-          class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight text-white"
-        >
+        <h1 class="text-white">
           ジェットファンク：長沼英樹サウンド再現プラグイン構成ガイド
         </h1>
 
@@ -160,11 +223,7 @@
           長沼英樹氏の楽曲スタイルは、テクノ、ファンク、ソウル、ヒップホップを融合したユニークなサウンドが特徴です。このスタイルを「<strong>ジェットファンク</strong>」と名付け、その魅力をDTMで再現するためのプラグイン構成ガイドをまとめました。お手持ちのプラグインを効果的に活用することで、この「ジェットファンク」サウンドをあなたの制作に取り入れることが可能です。
         </p>
 
-        <h2
-          class="text-3xl sm:text-4xl font-bold text-dark-orange mb-8 text-center"
-        >
-          ジェットファンクサウンドの主要要素
-        </h2>
+        <h2 class="text-center">ジェットファンクサウンドの主要要素</h2>
 
         <p>ジェットファンクサウンドを構成する主な要素は以下の通りです。</p>
         <ul>
@@ -186,15 +245,9 @@
           </li>
         </ul>
 
-        <h2
-          class="text-3xl sm:text-4xl font-bold text-dark-orange mb-8 text-center"
-        >
-          プラグイン構成ガイド
-        </h2>
+        <h2 class="text-center">プラグイン構成ガイド</h2>
 
-        <h3 class="text-2xl sm:text-3xl font-bold text-dark-orange mb-4">
-          1. ドラムとグルーヴの構築
-        </h3>
+        <h3>1. ドラムとグルーヴの構築</h3>
         <p>
           ジェットファンクサウンドの核となる「速いBPMのファンクグルーヴ」と「ブレイクビーツ」を構築します。
         </p>
@@ -234,9 +287,7 @@
           </li>
         </ul>
 
-        <h3 class="text-2xl sm:text-3xl font-bold text-dark-orange mb-4">
-          2. サンプリングと声ネタの活用
-        </h3>
+        <h3>2. サンプリングと声ネタの活用</h3>
         <p>
           ジェットファンクサウンドの真骨頂である「サンプリングの芸術」と「声ネタの活用」に、<strong>TAL-Sampler</strong>と<strong
             >Amigo Sampler</strong
@@ -297,9 +348,7 @@
           </li>
         </ul>
 
-        <h3 class="text-2xl sm:text-3xl font-bold text-dark-orange mb-4">
-          3. アシッドベースとシンセサウンド
-        </h3>
+        <h3>3. アシッドベースとシンセサウンド</h3>
         <p>
           ジェットファンクサウンドの特徴である「アシッドベース」と、ファンキーでエネルギッシュなシンセサウンドを構築します。
         </p>
@@ -349,9 +398,7 @@
           </li>
         </ul>
 
-        <h3 class="text-2xl sm:text-3xl font-bold text-dark-orange mb-4">
-          4. エフェクト処理
-        </h3>
+        <h3>4. エフェクト処理</h3>
         <p>
           ジェットファンクサウンドの「質感」や「空気感」を再現するために、エフェクトを積極的に使用します。
         </p>
@@ -424,11 +471,7 @@
           </li>
         </ul>
 
-        <h2
-          class="text-3xl sm:text-4xl font-bold text-dark-orange mb-8 text-center"
-        >
-          全体的なワークフローのヒント
-        </h2>
+        <h2 class="text-center">全体的なワークフローのヒント</h2>
         <ul>
           <li>
             <strong>サンプルの選定と加工</strong>:
@@ -460,47 +503,25 @@
     </main>
 
     <!-- フッター -->
-    <footer class="bg-dark-orange py-6 mt-12 shadow-inner rounded-t-lg">
-      <div class="container mx-auto text-center text-white text-sm">
-        <p>
+    <footer class="bg-dark-orange py-4 mt-5 shadow">
+      <div class="container text-center text-white">
+        <p class="mb-2">
           &copy; 2025 ジェットファンク・スタイルガイド. All rights reserved.
         </p>
-        <div class="mt-2 space-x-4">
-          <a href="#" class="hover:text-gray-300 transition-colors duration-300"
+        <div class="d-flex justify-content-center gap-4">
+          <a href="#" class="text-white text-decoration-none"
             >プライバシーポリシー</a
           >
-          <a href="#" class="hover:text-gray-300 transition-colors duration-300"
-            >利用規約</a
-          >
+          <a href="#" class="text-white text-decoration-none">利用規約</a>
         </div>
       </div>
     </footer>
 
-    <script>
-      // モバイルメニューのトグル機能
-      const menuButton = document.getElementById("menu-button");
-      const navMenu = document.getElementById("nav-menu");
-
-      menuButton.addEventListener("click", () => {
-        navMenu.classList.toggle("hidden");
-        navMenu.classList.toggle("flex");
-        navMenu.classList.toggle("flex-col");
-      });
-
-      // ウィンドウのリサイズ時にメニュー表示を調整 (Tailwindのmdブレークポイントと連動)
-      window.addEventListener("resize", () => {
-        if (window.innerWidth >= 768) {
-          // mdブレークポイント (768px)
-          navMenu.classList.remove("hidden", "flex", "flex-col");
-          navMenu.classList.add("flex-row");
-        } else {
-          // モバイル表示に戻ったときにhiddenにする
-          if (!menuButton.classList.contains("active")) {
-            // activeクラスでメニューが開いているか判定
-            navMenu.classList.add("hidden");
-          }
-        }
-      });
-    </script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
